# src/api/docs/swagger.json
@@ -8,6 +8,9 @@
           "minLength": 1,
           "type": "string"
         },
+        "secondary_id": {
+          "type": "string"
+        },
         "slug": {
           "maxLength": 255,
           "minLength": 1,
@@ -77,6 +80,9 @@
         "name": {
           "maxLength": 255,
           "minLength": 1,
+          "type": "string"
+        },
+        "secondary_id": {
           "type": "string"
         },
         "slug": {
@@ -182,6 +188,9 @@
           "maxLength": 255,
           "minLength": 1,
           "type": "string"
+        },
+        "secondary_id": {
+          "type": "string"
         }
       },
       "required": [
@@ -252,6 +261,9 @@
           "maxLength": 255,
           "minLength": 1,
           "type": "string"
+        },
+        "secondary_id": {
+          "type": "string"
         }
       },
       "type": "object"
@@ -284,6 +296,9 @@
         "review_count": {
           "type": "integer"
         },
+        "secondary_id": {
+          "type": "string"
+        },
         "stock": {
           "type": "integer"
         }
@@ -295,6 +310,9 @@
         "name": {
           "maxLength": 255,
           "minLength": 1,
+          "type": "string"
+        },
+        "secondary_id": {
           "type": "string"
         }
       },
@@ -308,6 +326,9 @@
         "name": {
           "maxLength": 255,
           "minLength": 1,
+          "type": "string"
+        },
+        "secondary_id": {
           "type": "string"
         }
       },
